# poodle

./: .gitignore  README.md  Singleton.py  __main__.py  _main_.py  agent.json  app.py  arg_parser.py  audio_fetcher.py  audio_queue_fetcher.py  audio_recorder.py  audio_stream_manager.py  audio_utils.py  body_transcriber.py  chat_config.json  chat_manager.py  chat_utils.py  config.py  environment.yml  event_flags.py  file_manager.py  input_utils.py  kd_listeners.py  keyboard_utils.py  keyword_detector.py  keyword_recognizer.py  main.py  main_logic.py  mock_audio_fetcher.py  models.json  nothing.py  poodle.py  poodle.sh  poodle_cli.py  poodle_tui.py  poodle_tui.tcss  poodle_tui_BACKUP_2954126.py  poodle_tui_LOCAL_2954126.py  poodle_tui_REMOTE_2954126.py  poodle_vui.py  (+11 more)
.gpteng/: file_list.txt
agents/: aide.json  appliedExpertSystem.json  langGPT.json  langGPT2.json  lifeCoach.json  luna.json  mentalHealthAdviser.json
cli/: arg_parser.py  kd_listeners.py  poodle_cli.py
conversations/: conversation_30-07-2023_02-03-50.json  conversation_30-07-2023_02-04-17.json  conversation_30-07-2023_02-04-43.json  conversation_30-07-2023_02-05-38.json  conversation_30-07-2023_02-33-28.json
core/: app_config.json  chat_config.json  chat_utils.py  core.py  file_manager.py  models.json
poodle/: __main__.py  config.py  vosk_langs.json
response_log/: response_30-07-2023_02-03-50.json  response_30-07-2023_02-04-17.json  response_30-07-2023_02-04-43.json  response_30-07-2023_02-05-38.json  response_30-07-2023_02-33-28.json
src/: config.py  event_flags.py  poodle_tui.py  (+1 more)
vui/: vui.py  (+1 more)
(+33 files in other folders)
