[tool.poetry]
name = "poodle"
version = "0.09"
description = "A tui for chatGPT"
authors = ["Kyle Sutherland"]
license = "gpl"
readme = "README.md"
packages = [{include = "poodle"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
openai = "^1.23.2"
rich = "^13.7.1"
dataclasses = "*"
pyfiglet = "*"
pycryptodome = "*"
regex = "*"
click = "*"
pyaudio = "*"
sentencepiece = "*"
tabulate = "*"
vosk = "*"
numpy = "*"
tts = "*"
openai-whisper = "*"
mecab-python3 = "*"
unidic-lite = "*"
librosa = "*"
fsspec = "*"
datasets = "*"
simpleaudio = "*"
pydub = "*"
yaspin = "*"
textual = "*"
rich-pixels = "*"
anthropic = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
